--- a/Tests/fixtures/smartphone-15.yml
+++ b/Tests/fixtures/smartphone-15.yml
@@ -1199,3 +1199,43 @@
     model: Armor Pro LTE+
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: mozilla/5.0 (linux; android 9; bq-5530l) applewebkit/537.36 (khtml, like gecko) chrome/74.0.3729.136 mobile safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 74.0.3729.136
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: BX
+    model: Intense
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: mozilla/5.0 (linux; android 9; a80pro) applewebkit/537.36 (khtml, like gecko) chrome/83.0.4103.106 mobile safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: B2
+    model: A80 Pro
+  os_family: Android
+  browser_family: Chrome
