--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4069,7 +4069,7 @@ Senseit:
 
 # Sony & Sony Ericsson (combined as they are mixed up)
 Sony:
-  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|(?:[4-9]0[12])SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOL2[246]|SOV3[1-9]|SOV4[0-2]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1234]G|[134]H|[1234]J|[1-5]K|1M|[1-3]L)|R800[aix]|J8270|J9110|J9210|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771|E3 Dual'
+  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|(?:[4-9]0[12])SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOL2[246]|SOV3[1-9]|SOV4[0-2]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1-4]G|[1-4]H|[1-4]J|[1-5]K|1M|[1-3]L)|R800[aix]|J8270|J9110|J9210|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771|E3 Dual'
   device: 'smartphone'
   models:
     # SONY ERICSSON: explicit smartphone models
@@ -4353,7 +4353,7 @@ Sony:
     - regex: 'SGP771'
       model: 'Xperia Z4'
       device: 'tablet'
-    - regex: '(?:Sony(?:Ericsson)?)?(?:E58[02]3)'
+    - regex: '(?:Sony(?:Ericsson)?)?(?:E58[02]3|SO-02H)'
       model: 'Xperia Z5 Compact'
     - regex: '(?:Sony(?:Ericsson)?)?(?:E66[05]3|SOV32|501SO|SO-01H)'
       model: 'Xperia Z5'
@@ -8028,7 +8028,7 @@ Mediacom:
 
 # Medion
 Medion:
-  regex: 'Medion|(?:MD_)?LIFETAB|X5001[);/ ]|([SPX]10[0-9]{2}X|E10[45]1X)[);/ ]'
+  regex: 'Medion|(?:MD_)?LIFETAB|([SPX]10[0-9]{2}X|E10[45]1X|X5001|P851X)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '(?:MD_)?LIFETAB_([a-z0-9]+)'
@@ -8039,7 +8039,7 @@ Medion:
     - regex: '(E10[45]1X)[);/ ]'
       device: 'tablet'
       model: '$1'
-    - regex: '([SPX]10[0-9]{2}X)[);/ ]'
+    - regex: '([SPX]10[0-9]{2}X|P851X)[);/ ]'
       model: 'Lifetab $1'
       device: 'tablet'
     - regex: 'Medion(?: Smartphone)? ([^/;]+) Build'
@@ -8922,13 +8922,16 @@ Nous:
 
 # Nvidia
 Nvidia:
-  regex: '(SHIELD Tablet K1) Build|Tegra(Note-P1640| Note 7)'
+  regex: '(SHIELD Tablet K1) Build|SHIELD Android TV|Tegra(Note-P1640| Note 7)'
   device: 'tablet'
   models:
     - regex: 'TegraNote-P1640'
       model: 'Tegra Note P1640'
     - regex: '(SHIELD Tablet K1|Tegra Note 7)(?: Build|\))'
       model: '$1'
+    - regex: 'SHIELD Android TV'
+      model: 'SHIELD Android TV'
+      device: 'tv'
 
 # O+
 O+:
@@ -9485,16 +9488,16 @@ Oysters:
       model: '$1 $2'
     - regex: 'Oysters ([^/;]+)( Build|\))'
       model: '$1'
-# öwn
+# öwn (own)
 öwn:
-  regex: 'OWN'
+  regex: 'OWN|S4035 3G'
   device: 'smartphone'
   models:
     - regex: 'FUN ([67])'
       model: 'Fun $1'
     - regex: 'FUN 5\(4G\)'
       model: 'Fun 5 4G'
-    - regex: 'OWN[ _](S3000D|S3010|S3020D|S4010|S4025)'
+    - regex: '(?:OWN[ _])?(S3000D|S3010|S3020D|S4010|S4025|S4035 3G)'
       model: '$1'
     - regex: 'One Plus'
       model: 'One Plus'
@@ -13054,6 +13057,8 @@ Yezz:
       model: 'Andy 4EI2'
     - regex: 'Yezz-AC4EI'
       model: 'Andy 4EI'
+    - regex: 'YEZZ-A4M'
+      model: 'Andy A4M'
     - regex: 'ANDY_4EL2_LTE'
       model: 'Andy 4EL2 LTE'
     - regex: 'Andy_55EI'
@@ -13075,7 +13080,7 @@ Yezz:
 
 # Yu
 Yu:
-  regex: '(?:YU5[05]10[A]?|AO5510)[);/ ]'
+  regex: '(?:YU5[05]10[A]?|YU4711|AO5510)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'YU5010[A]?[);/ ]'
@@ -13084,6 +13089,8 @@ Yu:
       model: 'Yureka'
     - regex: 'YU5510[);/ ]'
       model: 'Yureka Plus'
+    - regex: 'YU4711[);/ ]'
+      model: 'Yunique'
 
 # Yuandao
 Yuandao:
@@ -13686,7 +13693,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N9180|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|Z3001S|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A5 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9|602ZT|MO-01J)[);/ ]'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|Z3001S|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A5 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9|602ZT|MO-01J)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -13710,6 +13717,8 @@ ZTE:
       model: 'Imperial'
     - regex: 'N9120[);/ ]'
       model: 'Avid'
+    - regex: 'N9130[);/ ]'
+      model: 'Speed'
     - regex: 'N9132[);/ ]'
       model: 'Prestige'
     - regex: 'N9136[);/ ]'
